@@ -1,3 +1,12 @@
+2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* tex/GNUmakefile $(outdir)/latin1.enc: Build fix:
+	merge stderr with stdout.  
+
+2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/libc-extension.cc: Tested BSD compile fix (Matthias Neeracher).
+
 2005-02-29  Graham Percival  <gperlist@shaw.ca>
 
 	* Documentation/user/instrument-notation.teily: moved
